<?php

namespace App\CoreFacturalo\Services\Models;

/**
 * Class Company.
 */
class Company
{
    /**
     * @var string
     */
    public $ruc;
    /**
     * @var string
     */
    public $razonSocial;
    /**
     * @var string
     */
    public $nombreComercial;
    /**
     * @var array
     */
    public $telefonos;
    /**
     * @var string
     */
    public $tipo;
    /**
     * @var string
     */
    public $estado;
    /**
     * @var string
     */
    public $condicion;
    /**
     * @var string
     */
    public $direccion;
    /**
     * @var string
     */
    public $departamento;
    /**
     * @var string
     */
    public $provincia;
    /**
     * @var string
     */
    public $distrito;
    /**
     * @var string
     */
    public $fechaInscripcion;
    /**
     * @var string
     */
    public $sistEmsion;
    /**
     * @var string
     */
    public $sistContabilidad;
    /**
     * @var string
     */
    public $actExterior;
    /**
     * @var array
     */
    public $actEconomicas;
    /**
     * @var array
     */
    public $cpPago;
    /**
     * @var array
     */
    public $sistElectronica;
    /**
     * @var string
     */
    public $fechaEmisorFe;
    /**
     * @var array
     */
    public $cpeElectronico;
    /**
     * @var string
     */
    public $fechaPle;
    /**
     * @var array
     */
    public $padrones;
}
