<?php

namespace App\Models\Billing;

class SoapType extends ModelTenant
{
    public $incrementing = false;
    public $timestamps = false;
}
