<?php

namespace App\Models\Billing;

class StateType extends ModelTenant
{
    public $incrementing = false;
    public $timestamps = false;
}
