<?php

namespace App\Models\Tenant;

use App\Models\Billing\Item as BillingItem;

class Item extends BillingItem
{
}

